<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Наш бюджет</string>

    <string name="purchases_caption">Покупки и платы</string>
    <string name="purchases_m_add">Добавить</string>
    <string name="purchases_m_user_account">Учетная запись</string>
    <string name="purchases_m_grouping">Группировка</string>
    <string name="purchases_m_filter">Фильтр</string>
    <string name="purchases_m_type">Виды товаров и услуг</string>
    <string name="purchases_m_about">О программе</string>
    <string name="purchases_m_donate">Пожертвовать</string>
    <string name="purchases_mc_execute">Оплатить</string>
    <string name="purchases_mc_plan">Планирование</string>
    <string name="purchases_mc_duplicate">Дублировать</string>
    <string name="purchases_mc_delete">Удалить</string>

    <string name="purchase_date_time_tile_plan">Запланировать на</string>
    <string name="purchase_date_time_tile_execute">Оплата произведена</string>
    <string name="purchase_date_time_ok">Ok</string>
    <string name="purchase_date_time_yesterday">вчера</string>
    <string name="purchase_date_time_today">сегодня</string>
    <string name="purchase_date_time_tomorrow">завтра</string>

    <string name="user_account_caption">Учетная запись</string>
    <string name="user_account_login">Логин</string>
    <string name="user_account_password">Пароль</string>
    <string name="user_account_enter">Войти</string>
    <string name="user_account_m_registration">Регистрация</string>
    <string name="user_account_m_invite_member">Пригласить пользователя</string>
    <string name="user_account_m_become_member">Присоединиться</string>
    <string name="user_account_button_enter">Войти</string>
    <string name="user_account_button_entered">Вход выполнен</string>
    <string name="user_account_err_incorrect_login_password">Неправильная пара логин пароль</string>

    <string name="registration_caption">Регистрация</string>
    <string name="registration_registration">Зарегистрировать</string>
    <string name="registration_err_another_login">Введите другой логин</string>
    <string name="registration_err_another_password">Введите другой пароль</string>
    <string name="registration_user_account_created">Учетная запись создана</string>

    <string name="alert_connect_err_server_connect">Сервер временно недоступен</string>
    <string name="alert_connect_err_inet">Отсутствует подключение к интернет</string>

    <string name="mark_types_caption">Выбрать товары и услуги</string>
    <string name="mark_types_button_ok">Готово</string>
    <string name="mark_types_err">Нужно выбрать хотя бы один вид</string>
    <string name="mark_types_m_add_type">Добавить вид</string>

    <string name="types_caption">Виды товаров и услуг</string>
    <string name="types_m_add">Добавить</string>

    <string name="type_caption">Название товара или услуги</string>
    <string name="type_text_unit">Единицы измерения</string>
    <string name="type_button_save">Сохранить</string>
    <string name="type_button_save_change">Сохранить изменения</string>
    <string name="type_err_save">Такой вид товара или услуги уже существует</string>
    <string name="type_dialog_params_save">Ok</string>

    <string name="details_caption">Товары и услуги</string>
    <string name="details_status">Итого</string>
    <string name="details_sub_caption_date_time_plan">План</string>
    <string name="details_sub_caption_date_time_exec">Оплачено</string>
    <string name="details_sub_caption_date_time_on">на</string>
    <string name="details_sub_caption_date_time_in">в</string>

    <string name="details_m_add">Добавить</string>
    <string name="details_m_plan">Планирование</string>
    <string name="details_m_execute">Оплатить</string>
    <string name="details_mс_delete">Удалить</string>

    <string name="detail_params_currency_name">руб.</string>
    <string name="detail_params_price">Цена</string>
    <string name="detail_params_for">за</string>
    <string name="detail_params_amount">Кол-во</string>
    <string name="detail_params_cost">Стоимость</string>
    <string name="detail_params_save">Сохранить</string>

    <string name="movement_m_context_list_mov_delete">Удалить движение</string>
    <string name="common_currency">р.</string>
    <string name="common_currency_small">к.</string>

    <string name="intent_purchases_id">intent_purchases_id</string>
    <string name="intent_login">intent_login</string>
    <string name="intent_password">intent_password</string>

    <string name="dialog_invite_member_caption">Этот код должен ввести второй пользователь</string>
    <string name="dialog_invite_member_status">Окончание действия этого кода через %2d секунд</string>
    <string name="dialog_invite_alert_title">Время попытки вышло</string>
    <string name="dialog_invite_alert_message">Повторить попытку ?</string>

    <string name="alert_button_yes">Да</string>
    <string name="alert_button_no">Нет</string>
    <string name="alert_button_cancel">Отмена</string>

    <string name="dialog_become_member_caption">Введите код отображенный у первого пользователя</string>
    <string name="dialog_become_member_become">Присоединиться</string>
    <string name="dialog_become_member_м_error">Введен неверный код</string>
    <string name="dialog_become_member_м_ок">Вы успешно присоединились к другому пользователю</string>
    <string name="dialog_invite_member_connected">Пользователь успешно присоединился к вам</string>
    <string name="about_name_application">Наш бюджет.</string>
    <string name="about_developer">Разработчик Шумейко А. М.</string>
    <string name="about_developer_mail">shumeyko.a.m@gmail.com</string>

    <string name="filter_caption">Фильтр</string>
    <string name="filtr_from">с</string>
    <string name="filter_to">по</string>
    <string-array name="filter_terms">
        <item>за сегодня</item>
        <item>за последнюю неделю</item>
        <item>за последний месяц</item>
        <item>отображать всё</item>
        <item>за период</item>
    </string-array>

    <string name="notify_purchase_time">Пора сделать покупку</string>
    <string name="notify_purchase_planned">Запланирована покупка или плата</string>

</resources>
