<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center_horizontal" android:id="@+id/linearLayout3_">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal" android:singleLine="false"
                android:text="@string/about_name_application" android:gravity="center"
                android:textColor="@color/dialog_invite_member_caption"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal" android:singleLine="false"
                android:text="@string/about_developer" android:gravity="center"
                android:textColor="@color/dialog_invite_member_caption"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal" android:singleLine="false"
                android:text="@string/about_developer_mail" android:gravity="center"
                android:textColor="@color/dialog_invite_member_caption"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchase_date_time_ok"
                android:id="@+id/dialog_about_ok"
                />
    </LinearLayout>
</RelativeLayout>