<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" android:id="@+id/type_dialog_ll"
            android:gravity="center_vertical|center_horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/type_caption"
                android:id="@+id/type_dialog_text_name"
                android:layout_above="@+id/linearLayout" android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type_dialog_name"
                android:layout_alignParentRight="true" android:layout_alignParentLeft="true"
                android:singleLine="true"/>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/type_text_unit"
                    android:id="@+id/type_dialog_text_unit" android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp" android:layout_toLeftOf="@+id/type_dialog_unit"/>
            <Spinner
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/type_dialog_unit" android:layout_gravity="center_horizontal"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp" android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:id="@+id/type_dialog_line1"
                android:layout_centerHorizontal="true" android:layout_marginTop="8dp"
                android:background="@drawable/ic_g_line" android:layout_below="@+id/linearLayout"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_button_save"
                android:id="@+id/type_dialog_save" android:layout_below="@+id/type_dialog_line1"
                android:layout_centerHorizontal="true" android:layout_marginTop="12dp"/>
    </LinearLayout>
</RelativeLayout>